--- a/Views/Home/Home_RD.cshtml
+++ b/Views/Home/Home_RD.cshtml
@@ -9,7 +9,8 @@
     <ul class="sidebar-menu">
         <li><a href="@Url.Action("Home_RD", "Home")"><i class="fas fa-tachometer-alt menu-icon"></i><span class="menu-text">Dashboard</span></a></li>
         <li><a href="@Url.Action("Subjects", "Subject")"><i class="fas fa-book menu-icon"></i><span class="menu-text">Subject Management</span></a></li>
-        <li><a href="@Url.Action("CLOs", "Subject")"><i class="fas fa-list-ol menu-icon"></i><span class="menu-text">CLOs & Difficulty Levels</span></a></li>
+        <li><a href="@Url.Action("CLOs", "CLO")"><i class="fas fa-list-ol menu-icon"></i><span class="menu-text">CLOs</span></a></li>
+        <li><a href="@Url.Action("DLs", "DifficultyLevel")"><i class="fas fa-list-ol menu-icon"></i><span class="menu-text">Difficulty Levels</span></a></li>
         <li><a href="@Url.Action("Plan", "Distribution")"><i class="fas fa-tasks menu-icon"></i><span class="menu-text">Plan & Distribution</span></a></li>
         <li><a href="@Url.Action("QuestionBank", "Question")"><i class="fas fa-database menu-icon"></i><span class="menu-text">Question Bank</span></a></li>
         <li><a href="@Url.Action("CheckDuplicate", "Duplicate")"><i class="fas fa-search menu-icon"></i><span class="menu-text">Duplicate Check (AI)</span></a></li>
